--- a/recruitment-web/apply/result.html
+++ b/recruitment-web/apply/result.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>煤气罐招聘</title>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
                 <li class="layui-nav-item item-left"><a href="javascript:;" id="username">我的</a>
                     <dl class="layui-nav-child child">
                         <dd><a href="user.html">我的简历</a></dd>
-                        <dd><a href="cartAndCollection.html#lay-id=collection">投递记录</a></dd>
+                        <dd><a href="myDelivery.html">投递记录</a></dd>
                         <dd><a href="javascript:;" id="logout">退出登录</a></dd>
                     </dl>
                 </li>
