--- a/recruitment-web/admin/index.html
+++ b/recruitment-web/admin/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>管理员管理主页</title>
 </head>
 
 <body>
@@ -14,17 +14,21 @@
     <link rel="stylesheet" href="layui/css/layui.css" />
     <link rel="stylesheet" href="css/index.css">
     <ul class="layui-nav left" lay-filter="">
-        <li class="layui-nav-item">
-            <a
-                href="javascript:(function(){window.top.document.getElementById('content').src='receiveResume.html';})();">企业审核</a>
-        </li>
         <li class="layui-nav-item layui-this">
             <a
-                href="javascript:(function(){window.top.document.getElementById('content').src='companyAudit.html';})();">岗位审核</a>
+                href="javascript:(function(){window.top.document.getElementById('content').src='companyAudit.html';})();">企业审核</a>
+        </li>
+        <li class="layui-nav-item">
+            <a
+                href="javascript:(function(){window.top.document.getElementById('content').src='postAudit.html';})();">岗位审核</a>
         </li>
         <li class="layui-nav-item none" id="adminManage">
             <a
-                href="javascript:(function(){window.top.document.getElementById('content').src='chat.html';})();">管理员管理</a>
+                href="javascript:(function(){window.top.document.getElementById('content').src='adminAudit.html';})();">管理员管理</a>
+        </li>
+        <li class="layui-nav-item" id="carouselManage.html">
+            <a
+                href="javascript:(function(){window.top.document.getElementById('content').src='carousel.html';})();">轮播图管理</a>
         </li>
     </ul>
     <ul class="layui-nav right" lay-filter="">
