--- a/recruitment-web/apply/postDetail.html
+++ b/recruitment-web/apply/postDetail.html
@@ -32,7 +32,7 @@
                 <li class="layui-nav-item item-left"><a href="javascript:;" id="username">我的</a>
                     <dl class="layui-nav-child child">
                         <dd><a href="user.html">我的简历</a></dd>
-                        <dd><a href="cartAndCollection.html#lay-id=collection">投递记录</a></dd>
+                        <dd><a href="myDelivery.html">投递记录</a></dd>
                         <dd><a href="javascript:;" id="logout">退出登录</a></dd>
                     </dl>
                 </li>
@@ -131,7 +131,7 @@
         var webSocket;
         var commWebSocket;
         if ("WebSocket" in window) {
-            webSocket = new WebSocket("ws://192.168.10.111:8082/websocket/" + sessionStorage.getItem("username"));
+            webSocket = new WebSocket("ws://localhost:8082/websocket/" + sessionStorage.getItem("username"));
             //连通之后的回调事件
             webSocket.onopen = function () {
                 console.log("已经连通了websocket");
