--- a/recruitment-web/apply/user.html
+++ b/recruitment-web/apply/user.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>用户信息</title>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
             <li class="layui-nav-item item-left"><a href="javascript:;" id="username">我的</a>
                 <dl class="layui-nav-child child">
                     <dd><a href="user.html">我的简历</a></dd>
-                    <dd><a href="cartAndCollection.html#lay-id=collection">投递记录</a></dd>
+                    <dd><a href="myDelivery.html">投递记录</a></dd>
                     <dd><a href="javascript:;" id="logout">退出登录</a></dd>
                 </dl>
             </li>
@@ -42,8 +42,7 @@
         <div class="base-info">
             <blockquote class="layui-elem-quote">基本信息</blockquote>
             <div class="layui-form-item" hidden>
-                <input type="text" name="username" placeholder="请输入姓名" autocomplete="off"
-                    class="layui-input" id="user">
+                <input type="text" name="username" placeholder="请输入姓名" autocomplete="off" class="layui-input" id="user">
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">姓名</label>
@@ -123,6 +122,7 @@
             <div class="layui-input-block button">
                 <button class="layui-btn" id="submit" lay-filter="save" lay-submit onclick="return false">立即提交</button>
                 <button type="reset" class="layui-btn layui-btn-primary reset">重置</button>
+                <button class="layui-btn layui-btn-disabled" id="attachment" disabled>上传附件简历</button>
             </div>
         </div>
     </form>
@@ -148,6 +148,12 @@
                 layer = layui.layer;
             var user = sessionStorage.getItem("username");
             // var myInfo = '<li class="layui-nav-item item-left"><a href="javascript:;">我的</a></li>'
+            $.get("user/getResume?username=" + user, function (res) {
+                if (res.data.length != 0) {
+                    document.getElementById("attachment").classList.remove("layui-btn-disabled");
+                    document.getElementById("attachment").removeAttribute("disabled");
+                }
+            })
             if (user != null) {
                 document.getElementById("login").style.display = "none"; //隐藏
                 document.getElementById("myInfo").style.display = ""; //显示
@@ -185,6 +191,8 @@
                 $.post('user/resume', dataJson, function (res) {
                     if (res.responseCode == "0000") {
                         $('#uploadHidden').trigger('click');
+                        document.getElementById("attachment").classList.remove("layui-btn-disabled");
+                        document.getElementById("attachment").removeAttribute("disabled");
                         // layer.msg("保存成功")
                     } else {
                         layer.open({
@@ -216,6 +224,25 @@
                 }
                 , error: function () {
                     //请求异常回调
+                }
+
+            });
+            $(document).on('click', '#logout', function (e) {
+                sessionStorage.removeItem("username");
+                location.reload();
+            });
+            upload.render({
+                elem: '#attachment'
+                , url: 'user/uploadFile'
+                , accept: 'file'
+                , exts: 'pdf'
+                , data: {
+                    user: function () {
+                        return user;
+                    }
+                }
+                , done: function (res, index, upload) { //上传后的回调
+                    layer.msg("上传成功");
                 }
 
             });
