--- a/recruitment-web/company/chat.html
+++ b/recruitment-web/company/chat.html
@@ -38,7 +38,7 @@
             var webSocket;
             var commWebSocket;
             if ("WebSocket" in window) {
-                webSocket = new WebSocket("ws://192.168.10.111:8082/websocket/" + sessionStorage.getItem("username"));
+                webSocket = new WebSocket("ws://localhost:8082/websocket/" + sessionStorage.getItem("username"));
                 //连通之后的回调事件
                 webSocket.onopen = function () {
                     console.log("已经连通了websocket");
